# TradingAgents

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.nginx  PHASE1_COMPLETION.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.claude/: settings.local.json
.claude/plans/: brainstorming-设计文档.md  tasks-实现计划-Phase1.md
config/: settings.py
docs/: AI_QUANT_OPTIMIZATION_ROADMAP.md  ITERATION_DOCUMENT.md  OPTIMIZATION_DOCUMENT.md  PROJECT_ANALYSIS.md  REFERENCE_PROJECT_BORROWING.md  SHORT_TERM_100_REFACTOR.md  SIMULATION_TRAINING_PLAN.md  STOCK_UNIVERSE_OPTIMIZATION.md  UI_OPTIMIZATION_NOTES.md  V2_DEVELOPMENT_PLAN.md  V2_REQUIREMENTS.md  VERSION_UPDATE_2026-05-11.md
engine/llm/: factory.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
scripts/: init_db.py  sync_a_stock_daily.py
tests/: conftest.py  test_agents_base.py  test_analysis_agents.py  test_api.py  test_data_providers.py  test_graph_workflow.py  test_integration.py  test_llm_factory.py  test_memory.py  test_news_sentiment.py  test_researchers.py  test_risk_manager.py  test_risk_trader.py  test_scheduler.py  test_short_term_100.py  test_trader_account.py
tradingAgents/config/: settings.py  stock_universe.json  vendors.py
tradingAgents/data/: cache.py  technical.py  universe.py
tradingAgents/engine/: analysis_fallback.py
tradingAgents/research/: __init__.py  experiment_runner.py  qlib_adapter.py  qlib_data_exporter.py  qlib_workflow.py
tradingAgents/server/: main.py
tradingAgents/trader/: account.py  auto_strategy.py  (+8 more)
(+93 files in other folders)
